tests/paczka1/fuzzy1/41977095.err
Error in line 4: sGxOArx S766 99,01
Error in line 10: wGWxAwd S941 70,2
Error in line 17: aiEUgMZ8K S941 56,68
Error in line 11: gmxxhq S941 93,5
Error in line 19: fZMuepXY S635 24,6
Error in line 16: aiEUgMZ8K S941 25,7
Error in line 26: sGxOArx S766 83,6
Error in line 34: sGxOArx S941 20,5
